style the accordion and page
so that it sits center and is formatted to match the design system

--- a/Documentation/ClientAdmin.html
+++ b/Documentation/ClientAdmin.html
@@ -13,7 +13,13 @@
     </header>
     <div class="body-content">
         <h1>Client Administration</h1>
-        <button class="accordion">Managing Clients</button>
+        <button class="accordion">
+            <p>Managing Clients</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <h3 class="subheading">Creating a New Client</h3>
             <ol>
@@ -53,7 +59,13 @@
             </ol>
         </div>
 
-        <button class="accordion">Managing Users in the Client</button>
+        <button class="accordion">
+            <p>Managing Users in the Client</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <h3 class="subheading">Adding Users to a Client</h3>
             <ol>
