--- a/Documentation/Content.html
+++ b/Documentation/Content.html
@@ -13,7 +13,13 @@
     </header>
     <div class="body-content">
         <h1 id="authorized-content">Content</h1>
-        <button class="accordion">Accessing Content</button>
+        <button class="accordion">
+            <p>Accessing Content</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Scroll to see the desired content card under the corresponding client heading</li>
@@ -21,27 +27,51 @@
                 <li>Note that content to be downloaded will be indicated by a button at the bottom of the card that says <strong>Download</strong></li>
             </ol>
         </div>
-        <button class="accordion">Closing Content</button>
+        <button class="accordion">
+            <p>Closing Content</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <p>Click the back button in the browser to close the document</p>
             <p>or</p>
             <p>Use the Navigation Bar on the left side to choose a new page</p>
         </div>
-        <button class="accordion">Accessing the User Guide or Release Notes for content</button>
+        <button class="accordion">
+            <p>Accessing the User Guide or Release Notes for content</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Click on the button at the bottom of the desired content to view the documentation associated with that piece of content</li>
                 <li>Note that User Guide and Release Notes buttons will only appear if they are available for that content</li>
             </ol>
         </div>
-        <button class="accordion">Opening Content in a New Browser Tab</button>
+        <button class="accordion">
+            <p>Opening Content in a New Browser Tab</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>To open the main content, click on the button at the bottom of the content card that says <strong>Open in New Tab</strong></li>
                 <li>To open associated content, click the middle mouse button (scroll wheel), or right click and select <strong>Open Link in New Tab</strong> from the popup menu, while hovering over the User Guide or Release Notes buttons at the bottom of the card</li>
             </ol>
         </div>
-        <button class="accordion">Searching for Content</button>
+        <button class="accordion">
+            <p>Searching for Content</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Click on the search bar at the upper right of the page that says <strong>Filter content</strong></li>
