--- a/Documentation/ContentAccessAdmin.html
+++ b/Documentation/ContentAccessAdmin.html
@@ -13,7 +13,13 @@
     </header>
     <div class="body-content">
         <h1>Content Access Administration</h1>
-        <button class="accordion">Creating a Selection Group</button>
+        <button class="accordion">
+            <p>Creating a Selection Group</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Choose the Client for the content item you are working on by clicking the client card</li>
@@ -23,7 +29,13 @@
                 <li>Click <strong>Add Group</strong></li>
             </ol>
         </div>
-        <button class="accordion">Managing Users in Selection Groups</button>
+        <button class="accordion">
+            <p>Managing Users in Selection Groups</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <h3 class="subheading">Adding Users in Selection Groups</h3>
             <ol>
@@ -42,7 +54,12 @@
                 <li>When finished removing users, press the green checkmark on the card to save changes</li>
             </ol>
         </div>
-        <button class="accordion">Managing Access to Content</button>
+        <button class="accordion"><p>Managing Access to Content</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Navigate and select the Selection Group card</li>
@@ -54,7 +71,12 @@
                 <li>Check the desired selections in the <strong>Selections</strong> column to the right.</li>
             </ul>
         </div>
-        <button class="accordion">Suspending Access For a Selection Group</button>
+        <button class="accordion"><p>Suspending Access For a Selection Group</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Navigate and select the desired Selection Group card</li>
