--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -13,7 +13,13 @@
     </header>
     <div class="body-content">
         <h1>Content Publishing</h1>
-        <button class="accordion">Creating a New Content Item</button>
+        <button class="accordion">
+            <p>Creating a New Content Item</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Select the client to which the content will be published in the <strong>Clients</strong> column on the left side of the screen</li>
@@ -43,7 +49,12 @@
                 <li>The new content will not be viewable by the end user until the publication has been reviewed and approved</li>
             </ol>
         </div>
-        <button class="accordion">Updating Existing Content</button>
+        <button class="accordion"><p>Updating Existing Content</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Select the client for which the content item has been published in the <strong>Clients</strong> column on the left side</li>
@@ -55,7 +66,13 @@
                 <li>If a new content file, Thumbnail, User Guide, or Release Notes was included, the approval process outlined in the <strong>Content Publishing</strong> section above must be followed for the content to go live</li>
             </ol>
         </div>
-        <button class="accordion">Adding a Content Disclaimer</button>
+        <button class="accordion">
+            <p>Adding a Content Disclaimer</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Select the client for which the content item has been published in the <strong>Clients</strong> column on the left side</li>
@@ -135,7 +152,13 @@
                 </tr>
             </table>
         </div>
-        <button class="accordion">Deleting Content Items</button>
+        <button class="accordion">
+            <p>Deleting Content Items</p>
+            <img 
+                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
+                class="icon"
+                >
+        </button>
         <div class="content">
             <ol>
                 <li>Navigate to the Client, then the Content Item to be deleted</li>
