use links to map
because map

--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -114,8 +114,8 @@
                 </tr>
                 <tr>
                     <td>Link</td>
-                    <td>[Google](https://www.google.com)</td>
-                    <td><a href="https://www.google.com">Google</a></td>
+                    <td>[Milliman Access Portal](https://map.milliman.com)</td>
+                    <td><a href="https://map.milliman.com" target="_blank">Milliman Access Portal</a></td>
                 </tr>
                 <tr>
                     <td rowspan="2">Lists</td>
