make updates for the actions definitions
make it more readable

--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -148,27 +148,24 @@
         />
       </button>
       <div class="content">
-        <p>Activity log description</p>
-        <p>Abillity to download all info to csv</p>
+        <p>The activity log is available so that file drop admins can see what has been taking place within the file drop. You have the ability to refresh the page as needed. 30 days worth of data is shown by default, but pressing the "Download All" button will download all of the data available for the file drop as a csv.</p>
         <h3 class="subheading">Definitions of Actions</h3>
-        <ul>
-          <li><strong>SFTP account created:</strong></li>
-          <li><strong>SFTP account deleted:</strong></li>
-          <li><strong>Account added to permission group:</strong></li>
-          <li><strong>Account removed from permission group:</strong></li>
-          <li><strong>File drop created:</strong></li>
-          <li><strong>File drop deleted:</strong></li>
-          <li><strong>File drop updated:</strong></li>
-          <li><strong>File drop permission group created:</strong></li>
-          <li><strong>File drop permission group deleted:</strong></li>
-          <li><strong>File drop permission group updated:</strong></li>
-          <li><strong>SFTP directory created:</strong></li>
-          <li><strong>SFTP directory removed:</strong></li>
-          <li><strong>SFTP file write authorized:</strong></li>
-          <li><strong>SFTP file read authorized:</strong></li>
-          <li><strong>SFTP file delete authorized:</strong></li>
-          <li><strong>SFTP file or directory renamed:</strong></li>
-        </ul>
+        <p><strong>SFTP account created: </strong><br>A SFTP account was created</p>
+        <p><strong>SFTP account deleted: </strong><br>A SFTP account was deleted</p>
+        <p><strong>Account added to permission group: </strong><br>A user was added to a permission group. Permission groups can be a group of users or a single user</p>
+        <p><strong>Account removed from permission group: </strong><br>A user was removed from a permission group</p>
+        <p><strong>File drop created: </strong><br>The file drop was created</p>
+        <p><strong>File drop deleted: </strong><br>The file drop was deleted **********do we need this?</p>
+        <p><strong>File drop updated: </strong><br>The file drop name and/or description was updated</p>
+        <p><strong>File drop permission group created: </strong><br>A file drop permission group (either a group of users or a single user) was created</p>
+        <p><strong>File drop permission group deleted: </strong><br>A file drop permission group (either a group of users or a single user) was deleted</p>
+        <p><strong>File drop permission group updated: </strong><br>A file drop permission group was updated by adding or removing users to the group</p>
+        <p><strong>SFTP directory created: </strong><br>A SFTP directory was created</p>
+        <p><strong>SFTP directory removed: </strong><br>A SFTP directory was removed</p>
+        <p><strong>SFTP file upload authorized: </strong><br>An account was granted upload permission rights</p>
+        <p><strong>SFTP file download authorized: </strong><br>An account was granted download permission rights</p>
+        <p><strong>SFTP file delete authorized: </strong><br>An account was granted delete permission rights</p>
+        <p><strong>SFTP file or directory renamed: </strong><br>A SFTP file or directory was renamed</p>
       </div>
       <button class="accordion">
         <p>My Settings</p>
