make a few updates
I personally don't want to use all caps because that could change in the future to be prop case for example, and then the user guide would need to be udpated. this way, it can stay the same and message is still clear

--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -103,19 +103,19 @@
       <div class="content">
         <h3 class="subheading">Adding an Individual User to the File Drop</h3>
         <ol>
-          <li>In the file drop view, navigate to the file drop that you want to add user to</li>
-          <li>Select the "USER PERMISSIONS" pane at the right</li>
+          <li>In the file drop view, navigate to the file drop that you want to add a user to</li>
+          <li>Select the "User Permissions" pane at the right</li>
           <li>Click the pencil icon in the upper right to add User Permissions</li>
           <li>Click the green "Add User" link</li>
-          <li>Select the desired user(s) from the drop down list</li>
-          <li>Press "SAVE CHANGES"</li>
+          <li>Select the desired user from the drop down list</li>
+          <li>Press "Save Changes"</li>
         </ol>
         <h3 class="subheading">Creating a Permission Group</h3>
         <ol>
           <li>In the file drop view, navigate to the file drop that you want to add user to</li>
-          <li>Select the "USER PERMISSIONS" pane at the right</li>
+          <li>Select the "User Permissions" pane on the right</li>
           <li>Click the pencil icon in the upper right to add User Permissions</li>
-          <li>To add a user with their own permissions, click "Add User". To add a group of users with the same permissions, click "Add Group"</li>
+          <li>To add a group of users with the same permissions, click "Add Group"</li>
           <li>Choose the user(s) to be added from the dropdowns and select which permissions they should receive between Download, Upload, and Delete</li>
           <li>Press "Save Changes"</li>
         </ol>
@@ -123,7 +123,7 @@
         <h3 class="subheading">Editing a Permission Group</h3>
         <ol>
           <li>In the file drop view, navigate to the file drop that you want to add user to</li>
-          <li>Select the "USER PERMISSIONS" pane at the right</li>
+          <li>Select the "User Permissions" pane at the right</li>
           <li>Click on the edit icon in the upper right of the User Permissions form</li>
         </ol>
           <ul>
@@ -134,8 +134,8 @@
           </ul>
         <h3 class="subheading">Setting Permissions for a Permission Group</h3>
         <ul>
-          <li>In the file drop view, navigate to the file drop that you want to add user to</li>
-          <li>Select the "USER PERMISSIONS" pane at the right</li>
+          <li>In the file drop view, navigate to the file drop that you want to add a user to</li>
+          <li>Select the "User Permissions" pane on the right</li>
           <li>Click on the edit icon in the upper right of the User Permissions form</li>
           <li>Permissions for all usrs of the group are managed with the check boxes</li>
           <li>
@@ -188,7 +188,6 @@
         <p><strong>SFTP account account password generated: </strong><br>A user generated a new password</p>
         <p><strong>SFTP authentication failed: </strong><br>A connection attempt was blocked due to unsuccessful authentication or lack of authorization</p>
         <p><strong>File drop created: </strong><br>The file drop was created</p>
-        <p><strong>File drop deleted: </strong><br>The file drop was deleted **********do we need this?</p>
         <p><strong>File drop updated: </strong><br>The file drop name and/or description was updated</p>
         <p><strong>File drop permission group created: </strong><br>A file drop permission group (for either a group of users or a single user) was created</p>
         <p><strong>File drop permission group deleted: </strong><br>A file drop permission group (for either a group of users or a single user) was deleted. Affected user accounts and passwords are not destroyed but do lose access to the file drop until assigned to a new permission group</p>
